# denyx

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  backlog.md  denyx.toml
.cargo/: mutants.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  fuzz.yml  mutants.yml
backlog/: config.yml
backlog/tasks/: task-1 - Re-run-cargo-mutants-sweep-and-refresh-v0.1-baseline-in-docs-mutation-testing.md.md
crates/cli/: Cargo.toml  README.md
crates/cli/src/: doctor.rs  hook.rs  hook_daemon.rs  host_config.rs  init.rs  main.rs
crates/cli/tests/: audit_subcommand.rs  doctor.rs  hook.rs  hook_daemon.rs  host_config.rs  init.rs  policy_subcommands.rs  setup_flow.rs
crates/host/: Cargo.toml  README.md
crates/host/src/: audit.rs  confirm.rs  landlock_sandbox.rs  lib.rs  policy_host_consistency.rs  project_diagnosis.rs  startup_block.rs  taint.rs  verifier.rs  wasm_runner.rs
crates/host/tests/: audit_chain.rs  audit_scrub_wasm_native_parity.rs  confirm.rs  error_path_taint.rs  fuzz_stable.rs  host.rs  network_timeout.rs  owasp_agentic.rs  redirect_block.rs  runtime_call_limits.rs  runtime_caps.rs  runtime_no_output_after_local_only_read.rs  sandbox_bwrap.rs  subprocess_env.rs  subprocess_path_gate.rs  symlink_canonicalization.rs  taint.rs  verifier.rs  wasm_native_parity_matrix.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: main.rs
crates/local-mcp/: Cargo.toml  README.md
crates/local-mcp/src/: denyx_client.rs  doctor.rs  lib.rs  main.rs  ollama.rs  openai_compat.rs  pipeline.rs  prompt.rs  provider.rs  rag.rs  server.rs
crates/local-mcp/tests/: end_to_end.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: doctor.rs  main.rs
crates/mcp/tests/: audit_banner.rs  blocked_startup.rs  confirm_mode.rs  doctor.rs  elicitation.rs  server_mode.rs  sugar_tools.rs  tool_routing.rs
crates/policy/: Cargo.toml  README.md
crates/policy/src/: landlock_probe.rs  lib.rs  presets.rs
crates/policy/tests/: aegis_reserved_vars.rs  fuzz_stable.rs  gate_decisions.rs  http_verbs.rs  policy.rs
crates/runtime-starlark/: .gitignore  Cargo.toml  README.md  build.rs
crates/runtime-starlark/src/: lib.rs
docs/: 0001-wifi-wcn36xx-abort-on-HAL-errors-in-join-and-post-assoc-paths.patch  01-why-aegis.md  01-why-denyx.md  02-from-sigil.md  03-architecture.md  04-policy-file.md  04-security-threat-model.md  05-install.md  05-owasp-agentic-coverage.md  06-policy-file.md  06-quickstart.md  07-claude-code.md  07-install.md  08-opencode.md  08-quickstart.md  09-claude-code.md  09-local-executor.md  10-opencode.md  10-running-examples.md  11-denyx-for-teams.md  12-local-executor.md  13-running-examples.md  14-other-hosts.md  AGENT_POLICY_SPEC.md  CONCLUSIONS.md  PROJECT_PLAN.md  README.md  agent-policy-spec.md  claude-code-permission-tests.md  comparison.md  conclusions.md  denyx-for-teams.md  doctor.md  host-config.md  landlock-evaluation.md  macos-deployment.md  mutation-testing.md  owasp-agentic-coverage.md  project-plan.md  security-audit.md  (+8 more)
docs/pentest-artifacts/r2/: trace_codestral.jsonl  trace_phi4.jsonl  trace_qwen14.jsonl  trace_qwen7.jsonl
docs/pentest-artifacts/r2-v2/: trace_codestral.jsonl  trace_phi4.jsonl  trace_qwen14.jsonl  trace_qwen7.jsonl
docs/pentest-artifacts/r2-v3/: detector_comparison_qwen7-judge.jsonl  runtime_qwen7.jsonl
examples/: aegis-setup-prompt.md  denyx-setup-prompt.md
examples/local_executor/: local_mcp.py  probe_layer_variants.py  probes.py  rag.py  run.py  run_detector_comparison.py  run_exfil.py  run_multistep.py  run_orchestrated.py  run_pentest.py  run_tool_poisoning_probe.py
examples/macos/: aegis.lima.yaml  denyx.lima.yaml
examples/policies/: dev.toml  fastapi_dev.toml  fastapi_prod_readonly.toml  multistep_test.toml  rails_dev.toml
examples/scripts/: bad_credential_write.star  bad_env_secret.star  bad_exfil.star  bad_git_force.star  bad_ssrf.star  bad_subprocess.star  good_env_subprocess.star  good_pipeline.star  good_read.star
examples/wasm-smoke/: README.md  smoke.py
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: policy_globs.rs  policy_toml.rs  verifier.rs
scripts/: bench-wasm-runner.py  build-runtime-starlark.sh  precommit.sh  publish.sh
