[workspace]
resolver = "2"
members = [
    "crates/policy",
    "crates/host",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["marc <marc@spin42.com>"]
repository = "https://github.com/marc/aegis"

[workspace.dependencies]
aegis-policy = { path = "crates/policy", version = "0.1.0" }
aegis-host = { path = "crates/host", version = "0.1.0" }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
globset = "0.4"
url = "2"
ipnet = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
clap = { version = "4", features = ["derive"] }
starlark = "0.13"
starlark_syntax = "0.13"
allocative = "0.3"
ureq = { version = "2", default-features = false, features = ["tls"] }

[profile.release]
lto = "thin"
codegen-units = 1
