[workspace]
resolver = "2"
members = [
    "crates/policy",
    "crates/host",
    "crates/cli",
    "crates/mcp",
]
# Fuzz targets are a libFuzzer + nightly setup with their own
# Cargo.toml. They share the workspace dependency graph but are not
# built or tested by `cargo build --workspace` / `cargo test`.
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Lainez <marc@spin42.com>"]
repository = "https://github.com/mlainez/denyx"
homepage = "https://github.com/mlainez/denyx"
# MSRV. Pinned to a recent stable that satisfies all transitive
# deps (starlark 0.13 is the binding floor). Bumping this is a
# minor-version bump for the workspace.
rust-version = "1.80"

[workspace.dependencies]
denyx-policy = { path = "crates/policy", version = "0.1.0" }
denyx-host = { path = "crates/host", version = "0.1.0" }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
globset = "0.4"
url = "2"
ipnet = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
clap = { version = "4", features = ["derive"] }
starlark = "0.13"
starlark_syntax = "0.13"
allocative = "0.3"
ureq = { version = "2", default-features = false, features = ["tls"] }
sha2 = "0.10"

[profile.release]
lto = "thin"
codegen-units = 1
