[package]
name = "denyx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Denyx CLI binary."

[[bin]]
name = "denyx"
path = "src/main.rs"

[dependencies]
denyx-policy.workspace = true
denyx-host.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
sha2.workspace = true
