[package]
name = "denyx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Denyx CLI: run a policy-gated Starlark script with default-deny capability enforcement."
readme = "README.md"
keywords = ["security", "ai-agent", "policy", "starlark", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "denyx"
path = "src/main.rs"

[dependencies]
denyx-policy.workspace = true
denyx-host.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
sha2.workspace = true
