[package]
name = "denyx-host"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Denyx embeddable Starlark host with capability-typed effects."

[dependencies]
denyx-policy.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
starlark.workspace = true
allocative.workspace = true
ureq.workspace = true
sha2.workspace = true
