[package]
name = "denyx-host"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Denyx embeddable Starlark host with capability-typed effects, capability gates, and IFC-tainted output redaction."
readme = "README.md"
keywords = ["security", "ai-agent", "starlark", "sandbox", "embedding"]
categories = ["development-tools"]

[dependencies]
denyx-policy.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
starlark.workspace = true
starlark_syntax.workspace = true
allocative.workspace = true
ureq.workspace = true
sha2.workspace = true
url.workspace = true

# Wasm-sandbox path — parallel WasmRunner introduced in Phase 4 of the
# wasmtime-sandbox migration. The pre-built Starlark interpreter ships
# as a byte slice via denyx-runtime-starlark; wasmtime + wasmtime-wasi
# load it, provide WASI preview1, and dispatch denyx::host_* imports
# back through the existing Policy/Audit/Confirm machinery. The in-
# process Runner (above deps) remains the default until Phase 5 flips
# the call site in denyx-cli.
wasmtime.workspace = true
wasmtime-wasi.workspace = true
denyx-runtime-starlark.workspace = true

# Landlock (Linux 5.13+ LSM) subprocess sandboxing — Linux-only, so
# it's a target-specific dependency rather than a cargo feature: it
# simply isn't compiled on other platforms, no opt-in build flag
# needed. See crates/host/src/landlock_sandbox.rs and
# docs/landlock-evaluation.md.
[target.'cfg(target_os = "linux")'.dependencies]
landlock.workspace = true
