[package]
name = "denyx-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Denyx MCP server: exposes the policy-gated Starlark host over stdio JSON-RPC for Claude Code, opencode, and other MCP clients."
readme = "README.md"
keywords = ["security", "ai-agent", "mcp", "policy", "starlark"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "denyx-mcp"
path = "src/main.rs"

[dependencies]
denyx-policy.workspace = true
denyx-host.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["env"] }
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
