[package]
name = "denyx-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Denyx policy types and runtime-parsed policy file format."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
globset.workspace = true
url.workspace = true
ipnet.workspace = true

[dev-dependencies]
serde_json.workspace = true
