[package]
name = "denyx-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Denyx policy types and runtime-parsed policy file format. Default-deny capability gates for AI-agent runtimes."
readme = "README.md"
keywords = ["security", "ai-agent", "policy", "starlark", "sandbox"]
categories = ["development-tools", "config"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
globset.workspace = true
url.workspace = true
ipnet.workspace = true

[dev-dependencies]
serde_json.workspace = true
