[package]
name = "denyx-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Denyx policy types and runtime-parsed policy file format. Default-deny capability gates for AI-agent runtimes."
readme = "README.md"
keywords = ["security", "ai-agent", "policy", "starlark", "sandbox"]
categories = ["development-tools", "config"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
globset.workspace = true
url.workspace = true
ipnet.workspace = true

# Landlock (Linux 5.13+ LSM) availability probe for
# guard_sandbox_available — same "fail load if the sandbox backend
# isn't actually usable" posture as the bwrap-on-PATH check. Real
# subprocess-time enforcement lives in denyx-host (crates/host/src/
# landlock_sandbox.rs), where std::process::Command::pre_exec is
# available; this crate only needs the cheap probe.
[target.'cfg(target_os = "linux")'.dependencies]
landlock.workspace = true

[dev-dependencies]
serde_json.workspace = true
